<!-- Created by ChazzCoin : December 2019 -->

<resources>
    <!-- TESTING / DEV STRINGS    -->
    <string name="test_questionA">How would you rate the coachs ability to create a positive and inclusive environment for all players?</string>
    <string name="test_choiceA">The coach consistently creates a positive and inclusive environment for all players.</string>
    <string name="test_choiceB">The coach mostly creates a positive and inclusive environment for all players.</string>
    <string name="test_choiceC">The coach occasionally creates a positive and inclusive environment for all players.</string>
    <string name="test_choiceD">The coach rarely creates a positive and inclusive environment for all players.</string>

    <string name="about_ysr">Youth Sports Report\'s goal is simply to help make Youth Sports in America become more transparent!</string>

    <string name="app_name">Ludi Sports</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">YSR Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_locations">Locations</string>
    <string name="title_coaches">Coaches</string>
    <string name="title_orgs">Organizations</string>
    <string name="title_org">Organization</string>
    <string name="title_profile">Profile</string>
    <string name="title_service">Service</string>
    <string name="title_team">Team</string>
    <string name="title_management">Management</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">"Logout"</string>
    <string name="title_activity_calendar_view">CalendarView</string>

    <string name="example_1_title">Example 1</string>
    <string name="example_1_subtitle">Multiple selection, horizontal scrolling, shows usage of \"maxRowCount\" property to switch between week and month modes. Also shows usage of OutDateStyle \"endOfRow\".</string>
    <string name="example_2_title">Example 2</string>
    <string name="example_2_subtitle">Month header view, single selection, vertical scrolling, hides in and out dates.</string>
    <string name="example_3_title">Example 3</string>
    <string name="example_3_subtitle">Event style implementation, day labels as header view, single selection, month scroll listener. Similar to what is in the Google Calendar app.</string>
    <string name="example_4_title">Example 4</string>
    <string name="example_4_subtitle">Continuous selection within one month and across multiple months, dates older than the current day are disabled. Similar to what is in the Airbnb app.</string>
    <string name="example_5_title">Example 5</string>
    <string name="example_5_subtitle">Single selection, programmatic calendar scrolling, generates six rows for all months showing \"endOfGrid\" implementation of \"outDateStyle\" option. A flight schedule calender.</string>
    <string name="example_6_title">Example 6</string>
    <string name="example_6_subtitle">Custom date width and height, custom month view, item decoration on the CalendarView, continuous horizontal scrolling style.</string>
    <string name="example_7_title">Example 7</string>
    <string name="example_7_subtitle">Week mode calendar with single selection. Shows usage of \"hasBoundaries\" and  \"maxRowCount\" properties.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="spot_input_dialog_title">Enter spot title</string>
    <string name="spot_empty_input_text">Text is empty</string>
    <string name="spot_dialog_delete_confirmation">Delete this spot?</string>
    <string name="location_dialog_delete_confirmation">Delete this location?</string>
    <string name="spot_dialog_add_to_cart">Add spot to Cart?</string>
    <string name="delete">Delete</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="clear">Clear</string>
    <string name="week_mode">Week mode</string>

    <string name="action_settings">Settings</string>
    <string name="pay">Pay</string>
    <string name="pay_with_card">Pay with Card</string>
    <string name="pay_with_cashapp">Pay with Cashapp</string>
    <string name="checkout">Checkout</string>

    <string name="step_one">Step 1: Make Payment via CashApp.</string>
    <string name="step_two">Step 2: Confirm Payment Made.</string>
    <string name="open_cashapp">Copy $foodtruckfinderbham to Clipboard and Open CashApp!</string>
    <string name="paid_cashapp">I have transferred %1$s to $foodtruckfinderbham! Confirm Payment.</string>
    <string name="cashapp_directions">Please copy the CashApp Username and send the TOTAL amount. Once you have sent the payment, please press "PAID!".</string>

    <string name="two_spots_for_purchase">Will create two spots for purchase*</string>

        <!--    -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="demo_e">ckrphone@gmail.com</string>
    <string name="demo_p">allensgay</string>
    <string name="u_s__soccer_string">U.S. Soccer</string>
    <string name="www_ussoccer_com_string">www.ussoccer.com</string>
    <string name="__1__312__808_1300_string">+1 (312) 808-1300</string>
    <string name="communications_ussoccer_org_string">communications@ussoccer.org</string>
    <string name="u_s__soccer_federation_1801_s__prairie_ave__chicago__il_60616_string">U.S. Soccer Federation 1801 S. PrairieAve. Chicago, IL 60616</string>
    <string name="__coaching___training___talent_identification_string"> Coaching | Training | Talent Identification</string>
    <string name="american_youth_soccer_organization_string">American YouthSoccer Organization</string>
    <string name="_19700_s__vermont_ave___suite_103_torrance__ca_90502_string">19700 S. Vermont Ave., Suite 103Torrance, CA 90502</string>
    <string name="www_ayso_org_string">www.ayso.org</string>
    <string name="_800_872_2976_string">800-872-2976</string>
    <string name="email_aysor_org_string">email@aysor.org</string>
    <string name="__coaching___training___talent_identification_ek1_string"> Coaching | Training | Talent Identification</string>
    <string name="mlb_string">MLB</string>
    <string name="mlb_advanced_media__l_p__1271_avenue_of_the_americas_new_york__ny_10020_usa_string">MLB Advanced Media, L.P. 1271 Avenueof the Americas New York, NY 10020USA</string>
    <string name="www_mlb_com__string">www.mlb.com/</string>
    <string name="_866_800_1275_string">866-800-1275</string>
    <string name="email_mlb_com_string">email@mlb.com</string>
    <string name="__coaching___training___talent_identification_ek2_string"> Coaching | Training | Talent Identification</string>
    <string name="abc_sports_string">ABC Sports</string>
    <string name="mlb_advanced_media__l_p__1271_avenue_of_the_americas_new_york__ny_10020_usa_ek1_string">MLB Advanced Media, L.P. 1271 Avenueof the Americas New York, NY 10020USA</string>
    <string name="www_mlb_com__ek1_string">www.mlb.com/</string>
    <string name="_866_800_1275_ek1_string">866-800-1275</string>
    <string name="email_mlb_com_ek1_string">email@mlb.com</string>
    <string name="__coaching___training___talent_identification_ek3_string"> Coaching | Training | Talent Identification</string>
    <string name="service_string">Service</string>
    <string name="___label_string">Home</string>
    <string name="___label_ek1_string">organizations</string>
    <string name="___label_ek2_string">Profile</string>
    <string name="review_string">Review</string>
    <string name="time_string">9:41</string>
    <string name="title_string">Organizations</string>


</resources>
