<?xml version="1.0" encoding="utf-8"?>

<!-- Created by ChazzCoin : October 2022 -->

<!-- FOOD TRUCK MANAGER NAVIGATION -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_master"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_management"
        android:name="io.usys.report.ui.calendar.FoodCalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/spot_calendar_fragment" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.usys.report.ui.fragments.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_pop"
            app:destination="@id/navigation_pop_frag"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/navigation_pop_frag"
            app:popUpToInclusive="true">
        </action>
    </fragment>
    <fragment
        android:id="@+id/navigation_cart"
        android:name="io.usys.report.ui.calendar.FoodCalendarFragment"
        android:label="@string/title_orgs"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_org_list"
        android:name="io.usys.report.ui.fragments.OrganizationListFragment"
        android:label="@string/title_orgs"
        tools:layout="@layout/fragment_org_list">
    </fragment>

    <fragment
        android:id="@+id/navigation_coaches_list"
        android:name="io.usys.report.ui.fragments.CoachListFragment"
        android:label="@string/title_coaches"
        tools:layout="@layout/fragment_coaches_list">
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="io.usys.report.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_pop_frag"
        android:name="io.usys.report.ui.fragments.PopFragment"
        android:label="PopUp"
        tools:layout="@layout/fragment_pop">
    </fragment>

    <fragment
        android:id="@+id/navigation_base_frag"
        android:name="io.usys.report.ui.fragments.YsrFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_org_list">
    </fragment>

</navigation>