<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/ft_border_rounded_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/test_questionA"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layoutQuestionA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkReviewChoiceA"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <TextView
            android:id="@+id/txtReviewChoiceA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_choiceA"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutQuestionB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkReviewChoiceB"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <TextView
            android:id="@+id/txtReviewChoiceB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_choiceB"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutQuestionC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkReviewChoiceC"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <TextView
            android:id="@+id/txtReviewChoiceC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_choiceC"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutQuestionD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkReviewChoiceD"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15" />

        <TextView
            android:id="@+id/txtReviewChoiceD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_choiceD"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>