<?xml version="1.0" encoding="utf-8"?>
<io.usys.report.ui.ysrviews.YsrQuestionCard
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardQuestionRootCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/ysrWindowBackground"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardQuestionMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF">

        <TextView
            android:id="@+id/cardQuestionTxtQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:maxLines="5"
            android:text="@string/test_questionA"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardQuestionImgIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/cardQuestionRadioA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp"
            android:text="@string/test_choiceA"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardQuestionTxtQ" />

        <RadioButton
            android:id="@+id/cardQuestionRadioB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp"
            android:text="@string/test_choiceB"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardQuestionRadioA"
            app:layout_constraintTop_toBottomOf="@+id/cardQuestionRadioA" />

        <RadioButton
            android:id="@+id/cardQuestionRadioC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp"
            android:text="@string/test_choiceC"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardQuestionRadioB"
            app:layout_constraintTop_toBottomOf="@+id/cardQuestionRadioB" />

        <RadioButton
            android:id="@+id/cardQuestionRadioD"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="25dp"
            android:minHeight="48dp"
            android:text="@string/test_choiceD"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardQuestionRadioC"
            app:layout_constraintTop_toBottomOf="@+id/cardQuestionRadioC"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/cardQuestionImgIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ysr_2"
            android:contentDescription="TODO" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</io.usys.report.ui.ysrviews.YsrQuestionCard>